<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.haanhgs.sqlitedatabaseroomdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_mniInsert"
            app:destination="@id/mniInsert"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/mniInsert"
        android:name="com.haanhgs.sqlitedatabaseroomdemo.ui.insert.InsertFragment"
        android:label="@string/insert"
        tools:layout="@layout/fragment_insert" />

    <fragment
        android:id="@+id/mniUpdate"
        android:name="com.haanhgs.sqlitedatabaseroomdemo.ui.update.UpdateFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/mniSearch"
        android:name="com.haanhgs.sqlitedatabaseroomdemo.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/mniDelete"
        android:name="com.haanhgs.sqlitedatabaseroomdemo.ui.delete.DeleteFragment"
        android:label="@string/delete"
        tools:layout="@layout/fragment_delete" />

</navigation>